tests/positive/StdlibList/Data/Bool.juvix
module Data.Bool;

type Bool :=
  | true : Bool
  | false : Bool;

open Bool public;

not : Bool → Bool
  | true := false
  | false := true;
