tests/negative/Internal/UnsupportedTypeFunction.juvix
module UnsupportedTypeFunction;

type Bool :=
  | true
  | false;

f : Bool → Type
  | true := Type
  | false := Bool;
